This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/22/22: Fixed crash using multishot dialog with Novaigaotr not open.

2/22/22: Made it possible to avoid making a temporary stack when doing K2/K3
early returns; early return will now show some or more benefit when using it
for multiple Records.

2/22/22: Fixed rotate on load and Rotate Map, broken 2/16/22.

2/22/22: For Titan or scopes with Advanced Scripting, the program will adjust
image shift settling times to new, much lower values if ImageShiftDelays are
still at the original defaults and ISDelayScaleFactor is not set.

2/22/22: Fixed parsing of /* */ comments in properties file.

2/22/22: Made FrameSeriesFromVar set up an appropriate beam shift when given
image shifts on a JEOL.

2/22/22: The tilt delay set in the tilt series setup dialog is now separate
from the general tilt delay which applies during eucentricity.

2/22/22: Added option to iterate beam autocentering.

2/18/22: SEM_4-0-0beta6
2/18/22: Changed SEMCCD plugin to keep r/f 0 and add "need n" when frames are
saved without rotation and flip to avoid breaking alignframes.  The start of
the title after "SerialEMCCD" has also been changed.

2/17/22: SEM_4-0-0beta5
2/17/22: Fixed "No message box on error" in Navigator Acquire interfering with
proper tilt series termination on error.

2/17/22: Increased available number of scripts to 60.

2/16/22: Made alignment in DM with a K3 use the MotionCor2 capability.

2/16/22: Added ability to flip an imported map when rotating it.

2/16/22: Made Zemlin tableau use Record images with CTF acquire parameters.

2/15/22: Fix crash in frame alignment dialog if settings were never read.

2/15/22: Fixed crash when aligning whole tilt series in IMOD and Save was not