@@ -222,6 +222,7 @@ BOOL_SETT_ASSIGN("FilterChangeMagWithScreen", mFilterParam->autoMag)
 BOOL_SETT_ASSIGN("FilterMatchPixel", mFilterParam->matchPixel)
 BOOL_SETT_ASSIGN("FilterMatchIntensity", mFilterParam->matchIntensity)
 BOOL_SETT_ASSIGN("FilterDoMagShifts", mFilterParam->doMagShifts)
+BOOL_SETT_ASSIGN("RefineZLPWithTrial", mFilterParam->refineWithTrial)
 BOOL_SETT_GETSET("STEMmatchPixel", mWinApp->, STEMmatchPixel)
 BOOL_SETT_GETSET("ScreenSwitchSTEM", mWinApp->, ScreenSwitchSTEM)
 BOOL_SETT_GETSET("InvertSTEMimages", mWinApp->, InvertSTEMimages)
