@@ -253,7 +253,7 @@
       For K2, the image size and binning selection are preserved when switching into
       super-resolution mode, or when switching out of it if the binning is above 0.5.&nbsp;
       For K3, the same applies when switching in or out of counting mode, or when
-      turning on &#39;Bin counting frames by 2 in hardware&#39;.</P>
+      turning on &#39;Bin counting frames by 2&#39;.</P>
     <P><b>Use correlated double sampling (CDS) (K3 only)</b></P>
     <P>With a K3 camera, use this checkbox to turn on correlated double sampling for all
         kinds of images.&nbsp; CDS will reduce noise and improve the DQE but cuts the
@@ -262,7 +262,7 @@
         longer readout time, so exposure or frame times may change.&nbsp; You will be
         warned to check other parameter sets for changes in these times.&nbsp; This
         checkbox appears only if the version of GMS and the SEMCCD plugin support CDS.</P>
-    <P><b>Bin counting frames by 2 in hardware (K3 only)</b></P>
+    <P><b>Bin counting frames by 2 (K3 only)</b></P>
     <P>With a K3 camera, counting mode frames are saved as super-resolution by default.&nbsp; Use this checkbox to acquire 
       frames binned by 2 instead for saving or aligning; the binning is done quickly 
       in hardware and produces a frame size corresponding to the 
