@@ -1960,6 +1960,7 @@
 #define IDC_ACS_ITERATE                 2987
 #define IDC_EDIT_ACS_ITERATE            2988
 #define IDC_STAT_ACS_ITERATE_UM         2989
+#define IDC_REFINE_WITH_TRIAL           2990
 #define ID_NEW_IMAGE                    32771
 #define IDM_FILE_SAVEOTHER              32772
 #define IDM_FILE_READ                   32773
@@ -2494,9 +2495,9 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_3D_CONTROLS                     1
-#define _APS_NEXT_RESOURCE_VALUE        268
+#define _APS_NEXT_RESOURCE_VALUE        269
 #define _APS_NEXT_COMMAND_VALUE         33497
-#define _APS_NEXT_CONTROL_VALUE         2990
+#define _APS_NEXT_CONTROL_VALUE         2991
 #define _APS_NEXT_SYMED_VALUE           104
 #endif
 #endif
